# soam

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  bandit.yaml  blogpost.md  end2end.md  mypy.ini  noxfile.py  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/workflows/: dev.workflow.yml
documentation/: classes.md  dev_starting_point.md  developers_starting_point.md  development_pipeline.md  project_structure.md  references.md
documentation/source/: classes.md  conf.py  developers_starting_point.md  development_pipeline.md  end2end.md  end2end.rst  index.md  index.rst  mlflow_tracking.md  modules.rst  project_structure.md  references.md  soam.core.rst  soam.models.rst  soam.plotting.rst  soam.reporting.rst  soam.rst  soam.savers.rst  soam.utilities.rst  soam.workflow.rst
notebook/: full_work_meli.ipynb
notebook/data/: revenue.csv
soam/: __init__.py  alembic.ini  backtester.py  cfg.py  console.py  constants.py  data_models.py  db.py  dbconn.py  end2end.md  forecast_plotter.py  forecaster.py  helpers.py  kpi.py  mail_report.html  mail_report.py  main.py  plot_utils.py  preprocessor.py  runner.py  savers.py  series.py  settings.ini  slack_bot.py  slack_report.py  slicer.py  step.py  time_series_extractor.py  transformer.py  utils.py
soam/core/: step.py  (+2 more)
tests/: __init__.py  db_test_case.py  helpers.py  test_backtester.py  test_forecast_plotter.py  test_forecaster.py  test_preprocessor.py  test_slicer.py  test_time_series_extractor.py  test_transformer.py  test_utils.py
(+138 files in other folders)
